--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -8,9 +8,6 @@ on:
 jobs:
   pushContainer:
     runs-on: self-hosted
-    strategy:
-      matrix:
-        dockerfiles: ["certs-image", "ffmpeg", "actions-runner"]
     steps:
       - name: checkout
         uses: actions/checkout@v2
@@ -42,7 +39,7 @@ jobs:
         id: bump_tag
         uses: anothrNick/github-tag-action@1.67.0
         env:
-          # GITHUB_TOKEN: ${{ secrets.GO_MODULES_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
           DEFAULT_BUMP: minor
           DRY_RUN: false
