--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -8,6 +8,12 @@ on:
 jobs:
   pushContainer:
     runs-on: self-hosted
+
+    permissions:
+      # Give the default GITHUB_TOKEN write permission to commit and push the
+      # added or changed files to the repository.
+      contents: write
+
     steps:
       - name: checkout
         uses: actions/checkout@v2
@@ -28,9 +34,10 @@ jobs:
         run: make gen
       - name: Make sure testbuild still works.
         run: make gen
+
       - name: Commit & Push changes
         id: commit_all_inputs
-        uses: stefanzweifel/git-auto-commit-action@v4
+        uses: stefanzweifel/git-auto-commit-action@v7
         with:
           commit_message: "Automated OpenApi YAML Update"
           branch: "main"
